# gym-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/: urls.py
brands/: models.py  serializers.py
brands/migrations/: 0001_initial.py
companies/: models.py  serializers.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_remove_company_users.py
config/: settings.py
exercise_categories/: apps.py  models.py  serializers.py  urls.py  views.py
exercise_categories/migrations/: 0001_initial.py
exercises/: models.py  serializers.py  urls.py  views.py
exercises/migrations/: 0001_initial.py  0002_exercise_user.py
helpers/: helpers.py
scripts/: entrypoint.sh
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_country_of_citizenship_and_more.py  0003_alter_user_cellphone_number.py  0004_user_is_registration_complete.py  0005_user_company.py
